<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:indeterminate="true"
            android:layout_centerInParent="true"
            android:id="@+id/progress_bar"
            android:theme="@style/ProgressTheme"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">


            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/day_care_name"
                        android:textColorHint="@color/text_color_hint">

                        <EditText
                            android:id="@+id/input_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/edit_text_color"
                            android:maxLength="15"
                            android:singleLine="true"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/address"
                        android:textColorHint="@color/text_color_hint">

                        <EditText
                            android:id="@+id/input_contact"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/edit_text_color"
                            android:maxLength="15"
                            android:singleLine="true"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/short_description"
                        android:textColorHint="@color/text_color_hint">

                        <EditText
                            android:id="@+id/input_short"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/edit_text_color"
                            android:maxLength="15"
                            android:singleLine="true"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/description"
                        android:textColorHint="@color/text_color_hint">

                        <EditText
                            android:id="@+id/input_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/edit_text_color"
                            android:maxLength="15"
                            android:singleLine="true"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/min_age"
                        android:textColorHint="@color/text_color_hint">

                        <EditText
                            android:id="@+id/input_min_age"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/edit_text_color"
                            android:maxLength="15"
                            android:singleLine="true"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/max_age"
                        android:textColorHint="@color/text_color_hint">

                        <EditText
                            android:id="@+id/input_max_age"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/edit_text_color"
                            android:maxLength="15"
                            android:singleLine="true"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/min_budget"
                        android:textColorHint="@color/text_color_hint">

                        <EditText
                            android:id="@+id/input_min_budget"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/edit_text_color"
                            android:maxLength="15"
                            android:singleLine="true"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/max_budget"
                        android:textColorHint="@color/text_color_hint">

                        <EditText
                            android:id="@+id/input_max_budget"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/edit_text_color"
                            android:maxLength="15"
                            android:singleLine="true"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/cctv_avail"
                        android:textColorHint="@color/text_color_hint">

                        <EditText
                            android:id="@+id/input_cctv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/edit_text_color"
                            android:maxLength="15"
                            android:singleLine="true"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/meal_type"
                        android:textColorHint="@color/text_color_hint">

                        <EditText
                            android:id="@+id/input_meal_type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/edit_text_color"
                            android:maxLength="15"
                            android:singleLine="true"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/transport_avail"
                        android:textColorHint="@color/text_color_hint">

                        <EditText
                            android:id="@+id/input_transport"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/edit_text_color"
                            android:maxLength="15"
                            android:singleLine="true"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/day_care_type"
                        android:textColorHint="@color/text_color_hint">

                        <EditText
                            android:id="@+id/input_day_type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/edit_text_color"
                            android:maxLength="15"
                            android:singleLine="true"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_width="fill_parent"
                    android:layout_height="55dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/button_background"
                    android:padding="12dp"
                    android:text="@string/next"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>
</layout>