<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back"
                android:layout_width="24dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:tint="@android:color/white"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_back"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/sign_up"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:gravity="center"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical"
                android:tint="@android:color/white"
                android:layout_marginRight="10dp"
                android:visibility="invisible"
                android:src="@drawable/ic_back"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:textColorHint="@color/text_color_hint">

                    <EditText
                        android:id="@+id/input_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:hint="@string/name"
                        android:textColor="@color/edit_text_color"
                        android:maxLength="15"
                        android:singleLine="true"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/text_color_hint">

                    <EditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:hint="@string/email_address"
                        android:textColor="@color/edit_text_color"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/text_color_hint">

                    <EditText
                        android:id="@+id/input_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:hint="@string/phone"
                        android:textColor="@color/edit_text_color"
                        android:inputType="number"
                        android:maxLength="15"
                        android:singleLine="true"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:textColorHint="@color/text_color_hint">

                    <EditText
                        android:id="@+id/input_dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:hint="@string/dob"
                        android:textColor="@color/edit_text_color"
                        android:inputType="textEmailAddress"
                        android:maxLength="15"
                        android:editable="false"
                        android:focusable="false"
                        android:singleLine="true"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="16sp"
                        android:textColor="@color/edit_text_color"
                        android:text="Gender"/>

                    <RadioGroup
                        android:id="@+id/radio_group"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="5dp"
                        android:visibility="gone"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/male_radionbtn"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="Male"
                            android:checked="true"
                            android:layout_height="wrap_content"/>

                        <RadioButton
                            android:id="@+id/female_radiobtn"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="Female"/>

                    </RadioGroup>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:textColorHint="@color/text_color_hint">

                    <EditText
                        android:id="@+id/input_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:hint="@string/gender"
                        android:textColor="@color/edit_text_color"
                        android:inputType="textEmailAddress"
                        android:maxLength="15"
                        android:singleLine="true"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/text_color_hint">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:hint="@string/password"
                        android:textColor="@color/edit_text_color"
                        android:inputType="textPassword"
                        android:maxLength="15"
                        android:singleLine="true"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/text_color_hint">

                    <EditText
                        android:id="@+id/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:hint="@string/reconfirm_password"
                        android:textColor="@color/edit_text_color"
                        android:inputType="textPassword"
                        android:maxLength="15"
                        android:singleLine="true"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/policy_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="12sp"
                        android:textColor="@color/text_color_hint"
                        />

                    <TextView
                        android:id="@+id/privacy_policy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="12sp"
                        android:text="@string/terms_condition"/>

                </LinearLayout>

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_next"
                android:layout_width="fill_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/button_background"
                android:padding="12dp"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />


            <TextView
                android:id="@+id/sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/already_sign"/>

        </LinearLayout>

    </LinearLayout>
</layout>